[tool.poetry]
name = "nonebot-plugin-txt2img"
version = "0.2.0"
description = "轻量文字转图片插件"
authors = ["mobyw <mobyw66@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mobyw/nonebot-plugin-txt2img"
repository = "https://github.com/mobyw/nonebot-plugin-txt2img"
documentation = "https://github.com/mobyw/nonebot-plugin-txt2img/blob/main/README.md"
keywords = ["nonebot2", "qq", "plugin"]
packages = [
    { include = "nonebot_plugin_txt2img" }
]

[tool.poetry.dependencies]
python = "^3.7.3"
pillow = "^9.0.0"
wcwidth = "^0.2.5"
httpx = "^0.22.0"
nonebot2 = "^2.0.0-beta.4"
nonebot-adapter-onebot = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
