[tool.poetry]
name = "nonebot-plugin-txt2img"
version = "0.4.0"
description = "轻量文字转图片插件"
authors = ["mobyw <mobyw66@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mobyw/nonebot-plugin-txt2img"
repository = "https://github.com/mobyw/nonebot-plugin-txt2img"
documentation = "https://github.com/mobyw/nonebot-plugin-txt2img/blob/main/README.md"
keywords = ["nonebot2", "qq", "plugin"]
packages = [
    { include = "nonebot_plugin_txt2img" }
]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = {version = "^2.0.0", extras = ["fastapi", "httpx"]}
nonebot-plugin-send-anything-anywhere = "^0.5.0"
nonebot-plugin-localstore = "^0.6.0"
pillow = "^10.2.0"
pydantic = "^1.10.5"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
src_paths = ["plugins"]
extra_standard_library = ["typing_extensions"]

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901"]
line-length = 88
target-version = "py38"

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
